--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -1,46 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
 
-        tools:ignore="MissingConstraints">
-        <ImageView
-android:id="@+id/captureIv"
-            android:layout_width="200dp"
-            android:padding="30dp"
-            android:layout_height="200dp"
-            android:src="@drawable/mainimage"/>
+       <ScrollView
+           android:layout_above="@+id/linearholder"
+           android:layout_alignParentTop="true"
+           android:layout_marginTop="8dp"
+           android:layout_marginStart="8dp"
+           android:layout_marginEnd="8dp"
+           android:layout_marginBottom="8dp"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent">
         <TextView
             android:id="@+id/tv"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_margin="30dp"
             android:layout_height="wrap_content"
             android:text="hey"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
           />
+       </ScrollView>
+    <LinearLayout
+        android:id="@+id/linearholder"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+
+        tools:ignore="MissingConstraints">
         <Button
             android:id="@+id/snapimage"
-            android:layout_width="wrap_content"
-            android:layout_margin="30dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_margin="8dp"
             android:layout_height="wrap_content"
-            android:text="snap"
+            android:text="Capture"
             app:layout_constraintBottom_toBottomOf="parent"
             android:background="@drawable/button_back"
             app:backgroundTint="@color/purple_700" />
         <Button
-            android:id="@+id/detect"
-            android:layout_width="wrap_content"
-            android:layout_margin="30dp"
+            android:visibility="gone"
+            android:id="@+id/copyimage"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_margin="8dp"
             android:layout_height="wrap_content"
-            android:text="detect"
+            android:text="copy text"
             app:backgroundTint="@color/purple_700"
             android:background="@drawable/button_back"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -49,4 +59,4 @@ android:id="@+id/captureIv"
             app:layout_constraintTop_toTopOf="parent" />
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
